--- a/src/data/intent_patrol.yml
+++ b/src/data/intent_patrol.yml
@@ -3,9 +3,62 @@ version: "3.1"
 nlu:
 - intent: patrol
   examples: |
-    - патрулируй
-    - разведывай
-    - осмотри окрестности
-    - разведка
-    - патруль по маршруту 2
-    - разведка маршрут 1
+    - патрулируй по [методу](object) 4
+    - патрулируй по [трассе](object) номер 3
+    - шныряйте по 5 [маршруту](object)
+    - патрулируйте по [способу](object) 6
+    - вынюхивайте по [схеме](object) номер 2
+    - сторожите по [касательной](object) радиуса 2 м
+    - обходите
+    - шныряй по [кольцу](object) размера 5 М
+    - дежурьте по [кольцу](object) 3 м
+    - барражируйте по [кольцу](object) размером 6 м
+    - сторожите по [кругу](object) 10 м
+    - вынюхивай по [дороге](object) 10
+    - обходите по [окружности](object) 8 м
+    - шныряйте по 6 [маршруту](object)
+    - обходите по [кольцу](object) 4 м
+    - обходи по [программе](object) номер 3
+    - сторожи по [кругу](object) 9 м
+    - дежурьте по [маршруту](object) номер 10
+    - защищай
+    - барражируй по 9 [пути](object)
+    - защищайте по [плану](object) 10
+    - сторожите по [орбите](object) радиусом 1 М
+    - защищай по [схеме](object) 7
+    - патрулируй по [касательной](object) 8 м
+    - вынюхивай по 10 [программе](object)
+    - барражируйте по 4 [способу](object)
+    - патрулируйте
+    - дежурьте по [трассе](object) номер 1
+    - дежурьте по [касательной](object) размера 3 М
+    - патрулируй по [пути](object) номер 10
+    - защищай по [дороге](object) номер 3
+    - защищай по [кругу](object) 3 м
+    - разведывайте по [схеме](object) 2
+    - патрулируй по [касательной](object) размером 5 м
+    - дежурьте
+    - патрулируй по [дороге](object) номер 3
+    - сторожите
+    - сторожите по [орбите](object) радиуса 1 м
+    - защищай по 10 [схеме](object)
+    - шныряйте
+    - вынюхивайте
+    - обходи по [кругу](object) 5 м
+    - дежурьте по [кольцу](object) радиуса 5 м
+    - дежурь по [дороге](object) 5
+    - сторожи по [кругу](object) размером 9 М
+    - разведывайте по [программе](object) номер 7
+    - защищай по [пути](object) 1
+    - дежурьте по [окружности](object) размера 3 М
+    - вынюхивай по 5 [программе](object)
+    - шныряйте по 7 [маршруту](object)
+    - разведывайте по [орбите](object) 9 м
+    - патрулируй по 9 [маршруту](object)
+    - защищай по [способу](object) 7
+    - сторожи по [кругу](object) 3 м
+    - барражируй по [пути](object) номер 4
+    - шныряй
+    - вынюхивай по [методу](object) 8
+    - барражируйте
+    - разведывай по 10 [схеме](object)
