--- a/src/data/intent_stop.yml
+++ b/src/data/intent_stop.yml
@@ -3,7 +3,11 @@ version: "3.1"
 nlu:
 - intent: stop
   examples: |
-    - остановись
-    - стой
+    - стоп
+    - остановка
+    - припаркуйтесь
     - прекрати
-    - тормози
+    - довольно
+    - хватит
+    - тормозите
+    - прекратите
