--- a/src/configs/simple_conf.yml
+++ b/src/configs/simple_conf.yml
@@ -20,14 +20,16 @@ pipeline:
     random_seed: 1
     constrain_similarities: True
     epochs: 50
-    entity_recognition: False
+    entity_recognition: True
     use_masked_language_model: False
   - name: ResponseSelector
     random_seed: 1
     epochs: 50
     constrain_similarities: True
-  - name: RegexEntityExtractor
-  - name: EntitySynonymMapper
+  - name: DucklingEntityExtractor
+    url: "http://localhost:8000"
+    dimensions: ["duration", "distance"]
+    locale: "ru_RU"
   - name: FallbackClassifier
     threshold: 0.999
     ambiguity_threshold: 0.1
@@ -36,10 +38,4 @@ pipeline:
 # https://rasa.com/docs/rasa/core/policies/
 policies:
 
-   - name: MemoizationPolicy
-   - name: TEDPolicy
-     random_seed: 1
-     constrain_similarities: True
-     max_history: 5
-     epochs: 150
    - name: RulePolicy
